@startuml

title __UNIZA's Class Diagram__\n

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.App {
          {static} + main()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      abstract class sk.fri.uniza.Bytost {
          # jeNaZive : boolean
          # obrazok : BufferedImage
          # rakety : ArrayList<Raketa>
          # zivoty : int
          + Bytost()
          + getObrazok()
          + getPozicia()
          + getZivoty()
          + isJeNaZive()
          + jeZrazka()
          + setJeNaZive()
          + setObrazok()
          + setPozicia()
          + setZivoty()
          # zomri()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.Hrac {
          - meno : String
          - score : int
          - timer : Timer
          - timerListener : ActionListener
          - vlavo : boolean
          - vpravo : boolean
          - vystrel : boolean
          + Hrac()
          + getMeno()
          + getRakety()
          + getScore()
          + isVlavo()
          + isVpravo()
          + isVystrel()
          + kresli()
          + setMeno()
          + setRakety()
          + setScore()
          + setVlavo()
          + setVpravo()
          + setVystrel()
          + skontrolujVystrel()
          + tik()
          - initObrazok()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.HraciaPlocha {
          {static} + SIRKA : int
          {static} + VYSKA : int
          - bytosti : ArrayList<Bytost>
          - timer : Timer
          - timerListener : ActionListener
          + HraciaPlocha()
          + getHrac()
          # paintComponent()
          - initBytosti()
          - initPrekazky()
          - kresliCiaru()
          - kresliHraca()
          - kresliMimozemstanov()
          - kresliRakety()
          - odstranMimozemstanov()
          - odstranZniceneRakety()
          - tik()
          - vystrelRaketuNahodnemuMimozemastanovi()
          - zobrazInfoHraca()
          - zobrazMenoHraca()
          - zobrazSkoreHraca()
          - zobrazZivotyHraca()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.HraciaPlocha.Manazer {
          + Manazer()
          + keyPressed()
          + keyReleased()
          + keyTyped()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy {
          + VykreslovaniePlochy()
          + run()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.Mimozemstan {
          - rychlost : int
          - vlavo : boolean
          - vpravo : boolean
          + Mimozemstan()
          + kresli()
          + vystrel()
          - initObrazok()
          - tik()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      enum Obtiaznost {
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.Parser {
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.Pozicia {
          - x : int
          - y : int
          + Pozicia()
          + getX()
          + getY()
          + setX()
          + setY()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      class sk.fri.uniza.Raketa {
          - jeExplozia : boolean
          - jeHracova : boolean
          - jeZnicena : boolean
          - obrazok : BufferedImage
          + Raketa()
          + getObrazok()
          + getPozicia()
          + jeZnicena()
          + kresli()
          + setJeZnicena()
          + setObrazok()
          + setPozicia()
          - initObrazok()
          - initObrazokExplozie()
          - tik()
      }
    }
  }
  

  namespace  {
    namespace k.fri.uniza {
      enum TypMimozemstana {
      }
    }
  }
  

  sk.fri.uniza.Bytost o-- sk.fri.uniza.Pozicia : pozicia
  sk.fri.uniza.Hrac -up-|> sk.fri.uniza.Bytost
  sk.fri.uniza.HraciaPlocha -up-|> javax.swing.JPanel
  sk.fri.uniza.HraciaPlocha +-down- sk.fri.uniza.HraciaPlocha.Manazer
  sk.fri.uniza.HraciaPlocha +-down- sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy
  sk.fri.uniza.HraciaPlocha.Manazer .up.|> java.awt.event.KeyListener
  sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy .up.|> java.lang.Runnable
  sk.fri.uniza.HraciaPlocha.VykreslovaniePlochy o-- sk.fri.uniza.HraciaPlocha : plocha
  sk.fri.uniza.Mimozemstan -up-|> sk.fri.uniza.Bytost
  sk.fri.uniza.Raketa o-- sk.fri.uniza.Pozicia : pozicia


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
